@@ -1,10 +1,13 @@
 /*
- * $Id: version.h,v 9.3 1991/07/11 11:13:51 dickey Exp $
+ * $Id: version.h,v 9.4 1991/07/12 08:21:59 dickey Exp $
  * Version-identifier for DED
  * $Log: version.h,v $
- * Revision 9.3  1991/07/11 11:13:51  dickey
- * minor nits about screen refresh
+ * Revision 9.4  1991/07/12 08:21:59  dickey
+ * added CTL/G command
  *
+ *		Revision 9.3  91/07/11  11:13:51  dickey
+ *		minor nits about screen refresh
+ *		
  *		Revision 9.2  91/07/02  17:48:21  dickey
  *		made file-list 'S' and 'P' commands 3-way.
  *		
@@ -197,4 +200,4 @@
  * 01 Dec 1987, added '*', '^' commands, made '%' refresh screen
  * 25 Nov 1987, added sccs-support (V,z,Z toggles, V,z,Z sorts)
  */
-static	char	version[] = "$Date: 1991/07/11 11:13:51 $";
+static	char	version[] = "$Date: 1991/07/12 08:21:59 $";
